# mercle_ckks

./: CMakeLists.txt  Design_Note.md  README.md  build.sh  run_demo.sh
src/: demo.cpp
